--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -10,6 +10,14 @@
     top: 90px;
     right: 40px;
     z-index: 5;
+
+    .empty-message{
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      margin-top: 100px;
+      font-weight: 600;
+    }
   
     .cart-items {
       height: 240px;
